WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135462
Fix resource leak in FillLayersPropertyWrapper object member
https://bugs.webkit.org/show_bug.cgi?id=135462
Summary
Fix resource leak in FillLayersPropertyWrapper object member
przemeks@pkuczynski.com
Reported
2014-07-31 06:51:33 PDT
Despite allocating memory in constructor, m_fillLayerPropertyWrapper is never freed causing memory leak.
Attachments
porposed patch
(1.77 KB, patch)
2014-07-31 06:53 PDT
,
przemeks@pkuczynski.com
no flags
Details
Formatted Diff
Diff
Patch
(3.00 KB, patch)
2014-08-01 11:50 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
przemeks@pkuczynski.com
Comment 1
2014-07-31 06:53:35 PDT
Created
attachment 235827
[details]
porposed patch
Simon Fraser (smfr)
Comment 2
2014-07-31 08:43:18 PDT
Comment on
attachment 235827
[details]
porposed patch This should use std::unique_ptr<>
Simon Fraser (smfr)
Comment 3
2014-08-01 11:50:05 PDT
Created
attachment 235897
[details]
Patch
WebKit Commit Bot
Comment 4
2014-08-01 17:00:43 PDT
Comment on
attachment 235897
[details]
Patch Clearing flags on attachment: 235897 Committed
r171960
: <
http://trac.webkit.org/changeset/171960
>
WebKit Commit Bot
Comment 5
2014-08-01 17:00:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug