Fix resource leak in FillLayersPropertyWrapper object member https://bugs.webkit.org/show_bug.cgi?id=135462

Reviewed by Andreas Kling.

Fix leak of m_fillLayerPropertyWrapper by using unique_ptr<>.
Based on patch by Przemyslaw Kuczynski.

* page/animation/CSSPropertyAnimation.cpp:
(WebCore::FillLayersPropertyWrapper::FillLayersPropertyWrapper):


Canonical link: https://commits.webkit.org/153414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171960 268f45cc-cd09-0410-ab3c-d52691b4dbfc